--- a/packages/pilot/public/index.html
+++ b/packages/pilot/public/index.html
@@ -27,6 +27,21 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-MMGHSNN');</script>
   <!-- End Google Tag Manager -->
+
+    <script
+      src="https://www.datadoghq-browser-agent.com/datadog-rum.js"
+      type="text/javascript">
+    </script>
+    <script>
+        window.DD_RUM && window.DD_RUM.init({
+            applicationId: '724b0c18-26b1-428e-8c52-c0ba03fe4ac2',
+            clientToken: 'pubbb525a8b1eed0ba3f57257280384fcdb',
+            site: 'datadoghq.com',
+            sampleRate: 100,
+            trackInteractions: true,
+            service: 'pilot'
+        });
+    </script>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
